--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
     })(window, document, document.documentElement)
 
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/hls.js@1"></script>
 </head>
 
 <body>
